# Aftermath

./: .clang-format  .gitignore  .gitmodules  Benchmark.java  Cargo.toml  LICENSE  Makefile  README.md  bubble.jl  bubble.py  test.java
.github/workflows/: CLIPPY.yml  SECURITY.yml
.obsidian/: workspace
BubbleScripts/: intentionally_invalid.jl  logger.jl  namespace.jl
aftermath_cfparser/: Cargo.toml
aftermath_cfparser/benches/: parser.rs
aftermath_cfparser/fuzz/: Cargo.toml
aftermath_cfparser/fuzz/fuzz_targets/: parser.rs
aftermath_cfparser/src/: class_parser.rs  consts.rs  errors.rs  lib.rs  tests.rs  verification.rs
aftermath_class_loader/: Cargo.toml
aftermath_class_loader/src/: lib.rs
aftermath_libjimage_bind/: CMakeLists.txt
aftermath_libjimage_bind/include/: aftermath_libjimage_bind.h
aftermath_libjimage_bind/src/: aftermath_libjimage_bind.cpp  imageDecompressor.cpp
benches/: parser.rs
class_basket/: complex_math.java  empty.java  hello_world.java  intentional_invalid_magic.java  large.java  module-info.java
scripts/: shell.ps1  shell.sh
scripts/byte_mods/: Cargo.toml
scripts/byte_mods/src/: main.rs
src/: lib.rs  main.rs  tests.rs
src/class_parser/: errors.rs  mod.rs  verification.rs
