[package]
name = "aftermath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
color-eyre = { version = "0.5", default-features = false }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parser"
harness = false
